Allow JVM arguments to be an array which would allow values with spaces.